--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "16.8.6",
     "react-native": "0.60.5",
     "react-native-contacts": "^5.0.2",
+    "react-native-device-info": "^2.3.2",
     "react-native-image-picker": "^1.0.2",
     "react-native-vector-icons": "^6.6.0"
   },
