--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -198,6 +198,7 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-device-info')
     implementation project(':react-native-contacts')
     implementation project(':react-native-image-picker')
     implementation fileTree(dir: "libs", include: ["*.jar"])
