--- a/ios/Podfile
+++ b/ios/Podfile
@@ -29,6 +29,8 @@ target 'reactna' do
 
   pod 'react-native-image-picker', :path => '../node_modules/react-native-image-picker'
 
+  pod 'RNDeviceInfo', :path => '../node_modules/react-native-device-info'
+
   target 'reactnaTests' do
     inherit! :search_paths
     # Pods for testing
