reactored former code and pkayed with device info

--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
   },
   "jest": {
     "preset": "react-native"
-  }
+  },
+  "main": "index.js",
+  "author": "CodesDaniel <mailidanielifechukwu@gmail.com>",
+  "license": "MIT"
 }
