--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "react": "16.8.6",
     "react-native": "0.60.5",
     "react-native-contacts": "^5.0.2",
     "react-native-device-info": "^2.3.2",
     "react-native-image-picker": "^1.0.2",
-    "react-native-vector-icons": "^6.6.0"
+    "react-native-vector-icons": "^6.6.0",
+    "react-redux": "^7.1.1",
+    "redux": "^4.0.4",
+    "redux-promise": "0.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
