--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -198,6 +198,8 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-gesture-handler')
+    implementation project(':react-native-reanimated')
     implementation project(':react-native-device-info')
     implementation project(':react-native-contacts')
     implementation project(':react-native-image-picker')
