--- a/ios/Podfile
+++ b/ios/Podfile
@@ -31,6 +31,10 @@ target 'reactna' do
 
   pod 'RNDeviceInfo', :path => '../node_modules/react-native-device-info'
 
+  pod 'RNReanimated', :path => '../node_modules/react-native-reanimated'
+
+  pod 'RNGestureHandler', :path => '../node_modules/react-native-gesture-handler'
+
   target 'reactnaTests' do
     inherit! :search_paths
     # Pods for testing
