--- a/ios/Podfile
+++ b/ios/Podfile
@@ -37,6 +37,8 @@ target 'reactna' do
 
   pod 'RNCAsyncStorage', :path => '../node_modules/@react-native-community/async-storage'
 
+  pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
+
   target 'reactnaTests' do
     inherit! :search_paths
     # Pods for testing
