--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -198,6 +198,7 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-video')
     implementation project(':@react-native-community_async-storage')
     implementation project(':react-native-gesture-handler')
     implementation project(':react-native-reanimated')
