--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native-image-picker": "^1.0.2",
     "react-native-reanimated": "^1.2.0",
     "react-native-vector-icons": "^6.6.0",
+    "react-native-video": "^5.0.2",
     "react-navigation": "^3.12.1",
     "react-redux": "^7.1.1",
     "redux": "^4.0.4",
